--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,10 @@
   integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
   crossorigin="anonymous"
 />
-
-
+\
+    <!-- Place your kit's code here -->
+    <script src="https://kit.fontawesome.com/a996b7e602.js" crossorigin="anonymous"></script>
+ 
     
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
